--- a/Note-player/pom.xml
+++ b/Note-player/pom.xml
@@ -38,6 +38,12 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>noteplayer/ui/**/*</exclude>
+                        <exclude>noteplauer/player/Main.java</exclude>
+                    </excludes>
+                </configuration>
             </plugin> 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
