--- a/Note-player/pom.xml
+++ b/Note-player/pom.xml
@@ -40,8 +40,8 @@
                 </executions>
                 <configuration>
                     <excludes>
+                        <exclude>noteplayer/player/Audio.class</exclude>
                         <exclude>noteplayer/ui/**/*</exclude>
-                        <exclude>noteplauer/player/Main.java</exclude>
                     </excludes>
                 </configuration>
             </plugin> 
